pid保存在run目录

--- a/data/site/hello/index.html
+++ b/data/site/hello/index.html
@@ -1,5 +1,5 @@
 <h2>hello alpine-nginx-php7</h2>
 <ul>
-<li><a href="javascript:;" onclick="window.location.href='ping.php?host='+window.location.host">hello ping.php</a></li>
-<li><a href="/dir/">hello php in dir</a></li>
+<li><a href="javascript:;" onclick="location.href='ping.php?host='+location.host">hello ping.php</a></li>
+<li><a href="javascript:;" onclick="location.href='/dir/'">hello php in dir</a></li>
 </ul>
