错将php的conf.d覆盖

--- a/data/site/hello/index.html
+++ b/data/site/hello/index.html
@@ -2,4 +2,5 @@
 <ul>
 <li><a href="javascript:;" onclick="location.href='ping.php?host='+location.host">hello ping.php</a></li>
 <li><a href="javascript:;" onclick="location.href='/dir/'">hello php in dir</a></li>
+<li><a href="javascript:;" onclick="location.href='/phpinfo.php'">phpinfo</a></li>
 </ul>
